CEXT-6269: Support Environment-Scoped Creation for Webhooks and Events Aligned with Business Configurations UX
